# irc

./: .cvsignore  .gitignore  .hgignore  .hgtags  .travis.yml  CHANGES  CHANGES.rst  CHANGES.txt  ChangeLog  LICENSE.txt  MANIFEST.in  Makefile  NEWS.rst  README  README.md  README.rst  README.txt  appveyor.yml  conftest.py  dccreceive  dccsend  hircd.py  ircbot.py  irccat  irccat2  irclib.py  mypy.ini  pavement.py  pyproject.toml  pytest.ini  python-irclib.spec.in  revamp.md  ruff.toml  servermap  setup.cfg  setup.py  setup.py.in  test_ircbot.py  testbot.py  tox.ini
.github/: FUNDING.yml
debian/: changelog  control  copyright  examples  rules
docs/: changes.rst  conf.py  history.rst  index.rst  irc.rst  irc.tests.rst
examples/: dccreceive.py  dccsend.py  testbot.py
irc/: __init__.py  _py2_compat.py  aio_client.py  bot.py  buffer.py  client.py  client_aio.py  codes.txt  connection.py  ctcp.py  dict.py  events.py  features.py  fixtures.py  functools.py  logging.py  message.py  modes.py  rfc.py  schedule.py  server.py  strings.py  util.py
irc/compat/py311/importlib/: resources.py
irc/contrib/: bot_library.py
irc/tests/: requirements.txt  test_aio_client.py  test_bot.py  test_client.py  test_client_aio.py  test_irclib.py  test_schedule.py
lib/: ircbot.py  irclib.py
newsfragments/: 195.feature.rst  205.bugfix.rst  214.feature.rst  216.feature.rst  224.bugfix.rst  228.bugfix.rst  231.bugfix.rst
scripts/: dccreceive.py  dccsend.py  irccat-aio.py  irccat.py  irccat2  irccat2-aio.py  irccat2.py  sasl-ssl-cat.py  servermap.py  ssl-cat.py  testbot.py
tests/: requirements.txt  test_irclib.py
web/: index.html
