[metadata]
name = irc
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = IRC (Internet Relay Chat) protocol library for Python
long_description = file:README.rst
url = https://github.com/jaraco/irc
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.7
install_requires =
	jaraco.collections
	jaraco.text
	jaraco.logging
	jaraco.functools>=1.20
	jaraco.stream
	pytz
	more_itertools
	tempora>=1.6
	importlib_metadata; python_version < "3.8"

	# workaround for #213
	jaraco.text < 3.10

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-flake8
	pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-cov
	pytest-mypy >= 0.9.1; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 1.3

	# local
	pygments

docs =
	# upstream
	sphinx
	jaraco.packaging >= 9
	rst.linker >= 1.9
	jaraco.tidelift >= 1.4

	# local

[options.entry_points]
