[metadata]
name = irc
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = IRC (Internet Relay Chat) protocol library for Python
long_description = file:README.rst
url = https://github.com/jaraco/irc
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.8
install_requires =
	jaraco.collections
	jaraco.text >= 3.10
	jaraco.logging
	jaraco.functools>=1.20
	jaraco.stream
	pytz
	more_itertools
	tempora>=1.6
	importlib_metadata; python_version < "3.8"

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	scripts*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-cov
	pytest-mypy; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 2.2
	pytest-ruff >= 0.2.1

	# local
	pygments

docs =
	# upstream
	sphinx >= 3.5
	# workaround for sphinx/sphinx-doc#11662
	sphinx < 7.2.5
	jaraco.packaging >= 9.3
	rst.linker >= 1.9
	furo
	sphinx-lint

	# tidelift
	jaraco.tidelift >= 1.4

	# local

	# workaround for sphinx-doc/sphinx#11543
	sphinx < 7.1

[options.entry_points]
